Change composer vendor name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "uafrica.com/oauth-server",
+    "name": "uafrica/oauth-server",
     "description": "OAuth Server for CakePHP 3 using the PHP League's OAuth Server",
     "type": "cakephp-plugin",
     "keywords": ["cakephp", "oauth", "oauth2", "oauth server", "oauth2 server"],
