Update to cakephp 3 stable

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "keywords": ["cakephp", "oauth", "oauth2", "oauth server", "oauth2 server"],
     "require": {
         "php": ">= 5.5",
-        "cakephp/cakephp": "3.0.x-dev",
+        "cakephp/cakephp": "~3.0.0",
         "league/oauth2-server": "~4.1",
-        "cakephp/migrations": "dev-master"
+        "cakephp/migrations": "~1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
