--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "uafrica/oauth-server",
-    "description": "OAuth Server for CakePHP 3 using the PHP League's OAuth Server",
+    "description": "OAuth Server for CakePHP 3 using the PHP League's OAuth2 Server",
     "type": "cakephp-plugin",
     "keywords": ["cakephp", "oauth", "oauth2", "oauth server", "oauth2 server"],
     "require": {
