--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
 
@@ -21,7 +20,7 @@ matrix:
   fast_finish: true
 
   include:
-    - php: 5.4
+    - php: 5.5
       env: PHPCS=1 DEFAULT=0
 
     - php: hhvm
@@ -34,7 +33,7 @@ before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
 
-  - sh -c "if [ '$PHPCS' = '1' ]; then composer require squizlabs/php_codesniffer; fi"
+  - sh -c "if [ '$PHPCS' = '1' ]; then composer require 'cakephp/cakephp-codesniffer:dev-master'; fi"
 
   - phpenv rehash
   - set +H
@@ -42,7 +41,7 @@ before_script:
 
 script:
   - sh -c "if [ '$DEFAULT' = '1' ]; then phpunit --stderr; fi"
-  - sh -c "if [ '$PHPCS' = '1' ]; then vendor/bin/phpcs -p --extensions=php --standard=psr2 --ignore=tests/bootstrap.php ./src ./tests ; fi"
+  - sh -c "if [ '$PHPCS' = '1' ]; then vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests ./config ./webroot; fi"
 
 notifications:
   email: false
