--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">= 5.5",
         "cakephp/cakephp": "~3.0.0",
         "league/oauth2-server": "~4.1",
-        "cakephp/migrations": "~1.0.0",
+        "cakephp/migrations": "~1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
