--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "authors": [
         {
             "name": "Walther Lalk",
-            "email": "waltherlalk@gmail.com"
+            "email": "walther@uafrica.com"
         }
     ]
 }
